# trestle-bot

./: .dockerignore  .flake8  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  action.yml  commitlint.config.js  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  release-please-config.json  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/actions/e2e-testing/: action.yml
.github/actions/publish-image/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml  codecov.yml  conventional-title.yml  e2e.yml  linters.yml  mkdocs.yml  publish.yml  release.yml  scorecard.yml  validate-adrs.yml
TEMPLATES/: README.md
TEMPLATES/github/: trestlebot-autosync-catalog.yml  trestlebot-autosync-profile.yml  trestlebot-autosync-ssp.yml  trestlebot-create-component-definition.yml  trestlebot-rules-transform.yml
actions/: README.md  common.sh
actions/autosync/: README.md  action.yml  auto-sync-entrypoint.sh
actions/create-cd/: README.md  action.yml  create-cd-entrypoint.sh
actions/rules-transform/: README.md  action.yml  actions.yml  rules-transform-entrypoint.sh
actions/sync-upstreams/: README.md  action.yml  sync-upstreams-entrypoint.sh
actions/trestle-bot/: action.yml
architecture/decisions/0001-record-architecture-decisions/: index.html
architecture/decisions/implement-cli-framework_001/: index.html
architecture/decisions/record-architecture-decisions_000/: index.html
architecture/diagrams/c4/: index.html
contributing/: index.html
docs/: index.md  troubleshooting.md
docs/architecture/.trestle/author/decisions/0.0.1/: template.md
docs/architecture/decisions/: 0001-record-architecture-decisions.md  implement-cli-framework_001.md  record-architecture-decisions_000.md
docs/diagrams/architecture/: c4.md
docs/diagrams/assemble/: assemble_diagrams.md
docs/tutorials/: authoring.md  github.md  jenkins.md  repo-init.yml  sync-cac-content.md
docs/workflows/: assemble_diagrams.md  create_diagrams.md
scripts/: update_action_readmes.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_bot.py  test_foo.py  testutils.py
tests/data/content_dir/controls/: 1234-example.yml  abcd-levels.yml  simplified_nist_ocp4.yml
tests/data/content_dir/products/rhel8/: product.yml
tests/data/content_dir/shared/macros/: test-macros.jinja
tests/data/json/: filter_profile.json  github_example_pull_response.json  github_example_repo_response.json  invalid_comp.json  invalid_test_ssp_index.json  simplified_filter_profile.json  simplified_nist_profile_upstream.json  test_comp.json  test_comp_2.json  test_ssp_index.json
tests/data/yaml/: test_complete_rule.yaml  test_complete_rule_multiple_controls.yaml  test_complete_rule_no_params.yaml  test_incomplete_rule.yaml  test_invalid_rule.yaml  test_rule_invalid_params.yaml
tests/e2e/: Dockerfile  README.md  conftest.py  e2e_testutils.py  play-kube.yml  test_e2e.py  test_e2e_compdef.py  test_e2e_ssp.py
tests/e2e/mappings/: mapping.json
tests/int/: test_int.py
tests/integration/: __init__.py
tests/trestlebot/: __init__.py  test_bot.py  test_cli.py  test_entrypoint.py  test_github.py  test_gitlab.py  test_reporter.py
tests/trestlebot/cli/: test_autosync_cmd.py  test_config.py  test_create_cmd.py  test_init_cmd.py  test_rule_transform.py  test_rule_transform_cmd.py  test_rules_transform_cmd.py  test_sync_cac_catalog_cmd.py  test_sync_cac_content_cmd.py  test_sync_upstreams_cmd.py  test_upstreams_cmd.py
tests/trestlebot/entrypoints/: __init__.py  test_autosync.py  test_create_cd.py  test_create_ssp.py  test_entrypoint_base.py  test_init.py  test_rules_transform.py  test_sync_upstreams.py
tests/trestlebot/tasks/: __init__.py  test_assemble_task.py  test_base_task.py  test_regenerate_task .py  test_regenerate_task.py  test_rule_transform_task.py  test_sync_cac_profile_task.py  test_sync_upstream_task.py
tests/trestlebot/tasks/authored/: __init__.py  test_compdef.py  test_profile.py  test_ssp.py  test_types.py
tests/trestlebot/transformers/: __init__.py  test_csv_to_yaml.py  test_csv_transformer.py  test_validations.py  test_yaml_to_csv.py  test_yaml_transformer.py
tests/workflows/: __init__.py  test_rules_transform_workflow.py
trestlebot/: __init__.py  __main__.py  bot.py  cli.py  cli_base.py  const.py  entrypoint.py  entrypoint_base.py  github.py  gitlab.py  log.py  provider.py  provider_factory.py  reporter.py
trestlebot/cli/: base.py  config.py  log.py  root.py  run.py  utils.py
trestlebot/cli/commands/: autosync.py  create.py  init.py  rule_transform.py  rules_transform.py  sync_cac_catalog.py  sync_cac_content.py  sync_upstreams.py  upstream.py  version.py
trestlebot/cli/options/: autosync.py  common.py  create.py
trestlebot/entrypoints/: __init__.py  autosync.py  create_cd.py  create_ssp.py  entrypoint_base.py  init.py  log.py  rule_transform.py  sync_upstreams.py
trestlebot/entrypoints/templates/github/: trestlebot-autosync-catalog.yml  trestlebot-autosync-profile.yml  trestlebot-create-component-definition.yml  trestlebot-rules-transform.yml
trestlebot/infra/entrypoints/: create.py  rule_transform.py
trestlebot/tasks/: __init__.py  assemble_task.py  base_task.py  regenerate_task.py  rule_transform_task.py  sync_cac_catalog_task.py  sync_cac_content.py  sync_cac_content_profile_task.py  sync_cac_content_task.py  sync_upstreams_task.py
trestlebot/tasks/authored/: __init__.py  base_authored.py  catalog.py  compdef.py  profile.py  ssp.py  types.py
trestlebot/transformers/: __init__.py  base_transformer.py  cac_transform.py  cac_transformer.py  csv_to_yaml.py  csv_transformer.py  trestle_rule.py  validations.py  yaml_to_csv.py  yaml_transformer.py
troubleshooting/: index.html
tutorials/authoring/: index.html
tutorials/github/: index.html
tutorials/sync-cac-content/: index.html
workflows/assemble_diagrams/: index.html
workflows/create_diagrams/: index.html
